--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.10.2",
     "jquery": "3.6.1",
     "mdb-vue-ui-kit": "3.1.0",
+    "moment": "^2.29.4",
     "toastr": "2.1.4",
     "vue": "3.2.26"
   },
